objects/CTS_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Asynch_Request_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to the SFDCToCTSAsynchRequest object Id</description>
        <inlineHelpText>Lookup relationship to the SFDCToCTSAsynchRequest object Id</inlineHelpText>
        <label>Asynch Request</label>
        <referenceTo>SFDCToCTSAsynchRequest__c</referenceTo>
        <relationshipLabel>CTS Error Logs</relationshipLabel>
        <relationshipName>CTS_Error_Logs_AsyncRequestId</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Log_Message__c</fullName>
        <description>Error Message associated to the log record</description>
        <inlineHelpText>Error Message associated to the log record</inlineHelpText>
        <label>Log Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <description>Name of the CTS Method executing when the error occurred</description>
        <inlineHelpText>Name of the CTS Method executing when the error occurred</inlineHelpText>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Id__c</fullName>
        <description>SFDC Object unique record Id</description>
        <inlineHelpText>SFDC Object unique record Id</inlineHelpText>
        <label>Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Record_Link__c</fullName>
        <description>Link to the Salesforce record associated to the Error Log</description>
        <inlineHelpText>Link to the Salesforce record associated to the Error Log</inlineHelpText>
        <label>Object Record Link</label>
        <type>Url</type>
    </fields>
    <description>Storage of all CTS flow errors that occur during the CTS Sync Service process</description>
    <label>CTS Error Log</label>
    <nameField>
        <displayFormat>CEL-{000000000}</displayFormat>
        <label>CTS Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CTS Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Asynch_Request_Id__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Object_Id__c</columns>
        <columns>Object_Record_Link__c</columns>
        <columns>Method_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Log_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>POST_CTS_Request_Log</fullName>
        <active>true</active>
        <description>Logs recorded in the process of sending the request to CTS for ticket creation</description>
        <label>POST CTS Request Log</label>
    </recordTypes>
    <recordTypes>
        <fullName>PRE_CTS_Request_Log</fullName>
        <active>true</active>
        <description>Logs recorded prior to sending the CTS Request for ticket creation</description>
        <label>PRE CTS Request Log</label>
    </recordTypes>
</CustomObject>